# stringstuff

./: .gitignore  meson.build  readme.md
include/: stringstuff.h
test/: meson.build  starttest.cpp
